# diting-sre

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.omc/: project-memory.json
.omc/sessions/: 2314b434-a737-40d6-a23f-33ad14715393.json  cb475386-67e4-43aa-b683-6308b904e563.json
.omc/state/: agent-replay-2314b434-a737-40d6-a23f-33ad14715393.jsonl  last-tool-error.json  subagent-tracking.json
data/eval/: eval_dataset.json
data/runbooks/: 01-high-5xx-error-rate.md  02-latency-spike.md  03-pod-crashloop.md  04-db-connection-pool-exhausted.md  05-oom-killed.md  06-disk-pressure-inode.md  07-redis-eviction.md  08-tls-cert-expired.md
docs/: ARCHITECTURE.md  INTERVIEW_STORIES.md  LEARNING_ROADMAP.md
docs/product/: 00-OVERVIEW.md  01-POSITIONING.md  02-MARKET.md  03-FEATURES.md  04-ARCHITECTURE.md  05-ROADMAP.md
mcp/: run_github_server.py
scripts/: demo_agent.py  demo_rag.py  eval_rag.py  ingest.py  trigger_alert.py
src/opscopilot/: __init__.py  api.py  config.py  llm.py
src/opscopilot/agents/: __init__.py  graph.py  nodes.py  state.py
src/opscopilot/alerts/: __init__.py  gateway.py  models.py  store.py
src/opscopilot/evolution/: __init__.py  ingestor.py  summarizer.py
src/opscopilot/execution/: __init__.py  executor.py  planner.py
src/opscopilot/notify/: __init__.py  notifier.py
src/opscopilot/rag/: __init__.py  chain.py  chunker.py  embeddings.py  (+4 more)
tests/: test_logic.py  test_tools.py
(+16 files in other folders)
