[project]
name = "opscopilot"
version = "0.1.0"
description = "OpsCopilot — 多 Agent 智能运维助手 (RAG + Tool Calling + MCP + LangGraph)"
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
